--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -2,198 +2,96 @@
 {% load goods_tags %}
 
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "deps/css/bootstrap/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "deps/css/my_css.css"" %}">
-    <!-- Стиль footer-a для главной страницы -->
-   {% block css %}
-   
-   {% endblock %}
-
-    <!-- Favicons for different platforms -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static "deps/favicon/apple-touch-icon.png" %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static "deps/favicon/favicon-32x32.png" %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "deps/favicon/favicon-16x16.png" %}">
-    <link rel="manifest" href="{% static "deps/favicon/site.webmanifest" %}">
-    <title>{{ title }}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{ title }}</title>
+  <link rel="icon" href="{% static 'deps/favicon/kidslook_favicon.ico' %}" type="image/x-icon">
+  <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'deps/css/my_css.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  {% block css %}{% endblock %}
 </head>
-
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-            <div class="container">
-                <a class="navbar-brand" href="{% url "main:index" %}">KidsLook</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Информация
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="#">Доставка и оплата</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">Контактная информация</a></li>
-                                <li><a class="dropdown-item  text-white" href="{% url "main:about" %}">Про нас</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-white" href="carts/cart.html">Корзина</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-white" href="users/login.html">Войти</a>
-                        </li>
-                        <li class="nav-item dropdown ">
-                            <a class="nav-link dropdown-toggle text-white" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Мой профиль
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item  text-white" href="carts/cart.html">Корзина</a></li>
-                                <li><a class="dropdown-item  text-white" href="users/profile.html">Личный кабинет</a>
-                                </li>
-                                <li><a class="dropdown-item  text-white" href="{% url "admin:index" %}">Админ панель</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item  text-white" href="#">Выйти</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <section>
-        <div class="container">
-            <!-- Каталог и корзина с фиксированным расположением на странице -->
-            <div class="row mt-1 position-fixed z-3">
-                <!-- Каталог -->
-                <div class="dropdown mb-2">
-                    <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Каталог
-                        <img class="mx-1" src="{% static "deps/icons/grid-fill.svg" %}" alt="Catalog Icon" width="16"
-                            height="16">
-                    </button>
-                    <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        {% tag_categories as categories %}
-                        {% for category in categories  %}
-                            <li><a class="dropdown-item text-white" href={% url "catalog:index" %}>{{category.name}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <!-- Значек корзины, вызывает модальное окно -->
-                <div>
-                    <button type="button" class="btn btn-dark btn-secondary d-flex" id="modalButton"
-                        aria-expanded="false">
-                        <img class="mx-1" src="{% static "deps/icons/grid-fill.svg" %}" alt="Catalog Icon" width="24"
-                            height="24">
-                        <span id="goods-in-cart-count">0</span>
-                    </button>
-                </div>
-                <!-- Разметка модального окна корзины -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-scrollable">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <h3 class="text-center mb-4">Корзина</h3>
-                                <div class="container" id="cart-items-container">
-                                    <!-- Разметка корзины -->
-                                    <div class="card mb-3 text-bg-light shadow-lg">
-                                        <div class="card-header">
-                                            <h5 class="card-title">Товар</h5>
-                                        </div>
-                                        <ul class="list-group list-group-flush">
-                                            <li class="list-group-item">
-                                                <div class="row text-center">
-                                                    <div class="col p-0">
-                                                        <div class="input-group">
-                                                            <span class="input-group-btn">
-                                                                <button type="button" class="btn btn-dark btn-sm decrement"
-                                                                    data-cart-id="" data-cart-change-url="">-</button>
-                                                            </span>
-                                                            <input type="text" class="form-control number" value="1"
-                                                                readonly>
-                                                            <span class="input-group-btn">
-                                                                <button type="button" class="btn btn-dark btn-sm increment"
-                                                                    data-cart-id="" data-cart-change-url="">+</button>
-                                                            </span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col p-0">
-                                                        <p>x 100.00 = </p>
-                                                    </div>
-                                                    <div class="col p-0"><strong>100.00 $</strong></div>
-                                                    <div class="col p-0">
-                                                        <a href="#" class="remove-from-cart" data-cart-id="">
-                                                            <img class="mx-1" src="{% static "deps/icons/trash3-fill.svg" %}"
-                                                                alt="Catalog Icon" width="16" height="16">
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="card mb-3 shadow-lg">
-                                        <div class="card-footer">
-                                            <p class="float-left">Итого <strong>1</strong> товар(а) на сумму</p>
-                                            <h4 class="float-left"><strong>100.00 $</strong></h4>
-                                        </div>
-                                    </div>
-                                    <!-- Закончилась разметка корзины -->
-                                </div>
-                                <a class="btn btn-dark" href="orders/create_order.html">
-                                    Оформить заказ
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Закончилась разметка модального окна -->
-            </div>
-        </div>
-        <!-- Контент -->
-        <div class="container">
-            <div class="row mt-1">
-                <div class="col-lg-2">
-                    <!-- Пустой блок на Ваше усмотрение -->
-                </div>
-                <div class="col-lg-10">
-                    <!-- Контент на странице -->
-                    {% block content %}
-                    
-                    {% endblock content %}
-                </div>
-            </div>
-        </div>
-    </section>
-    {% block footer %}
-    
-    {% endblock %}
-    
-    <script src="{% static "deps/js/jquery/jquery-3.7.0.min.js" %}"></script>
-    <script src="{% static "deps/js/jquery-events.js" %}"></script>
-    <script src="{% static "deps/js/jquery-ajax.js" %}"></script>
-    <script src="{% static "deps/js/bootstrap/bootstrap.bundle.min.js" %}"></script> 
-</body>
 
+  <nav class="navbar navbar-expand-lg shadow-sm fixed-top" style="background-color: #1c1c1c; z-index: 1045;">
+  <div class="container">
+    <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="{% url 'main:index' %}" style="color: white;">
+      <div style="height: 56px; display: flex; align-items: center;">
+        <img src="{% static 'deps/images/kidslook_logo.png' %}" alt="KidsLook Logo"
+             style="height: 80px; width: auto;">
+      </div>
+      <span style="font-size: 1.3rem;">KidsLook</span>
+    </a>
+
+    <button class="btn btn-custom" type="button" data-bs-toggle="offcanvas" data-bs-target="#catalogSidebar" aria-controls="catalogSidebar">
+      <i class="bi bi-list"></i> Каталог
+    </button>
+
+    <form class="d-flex me-auto ms-3" role="search" method="GET" action="{% url 'search:results' %}">
+      <input class="form-control me-2" type="search" placeholder="Поиск товаров..." name="q" aria-label="Search">
+      <button class="btn btn-custom" type="submit">Поиск</button>
+    </form>
+
+    <ul class="navbar-nav mb-2 mb-lg-0">
+      <li class="nav-item me-3">
+        <a class="nav-link" href="{% url 'favorites:index' %}" style="color: white;"> <i class="bi bi-heart"></i> Избранное </a>
+      </li>
+      <li class="nav-item me-3">
+        <a class="nav-link" href="{% url 'cart:detail' %}" style="color: white;"> <i class="bi bi-cart"></i> Корзина </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:login' %}" style="color: white;"> <i class="bi bi-person"></i> Войти </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div style="height: 56px;"></div>
+<!-- Offcanvas Sidebar -->
+<div class="offcanvas offcanvas-start bg-dark text-light" tabindex="-1" id="catalogSidebar" aria-labelledby="catalogSidebarLabel"
+     data-bs-backdrop="false" data-bs-scroll="true">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="catalogSidebarLabel">Категории</h5>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+  </div>
+  <div class="offcanvas-body">
+    <ul class="list-group list-group-flush">
+      {% get_categories as categories %}
+      {% for category in categories %}
+        {% if category.subcategory.exists %}
+          <li class="list-group-item bg-dark text-light">
+            <a class="text-light text-decoration-none d-block py-2 px-2" data-bs-toggle="collapse" href="#collapse-{{ category.id }}" role="button" aria-expanded="false" aria-controls="collapse-{{ category.id }}">
+              {{ category.name }} <i class="bi bi-chevron-down float-end"></i>
+            </a>
+            <div class="collapse" id="collapse-{{ category.id }}">
+              <ul class="list-group mt-2">
+                {% for sub in category.subcategory.all %}
+                  <li class="list-group-item bg-dark border-0 ps-4">
+                    <a class="text-light text-decoration-none d-block" href="{% url 'goods:index' sub.slug %}">{{ sub.name }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            </div>
+          </li>
+        {% else %}
+          <li class="list-group-item bg-dark text-light">
+            <a class="text-light text-decoration-none d-block py-2 px-2" href="{% url 'goods:index' category.slug %}">
+              {{ category.name }}
+            </a>
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </div>
+</div>
+
+<div class="container-fluid px-0 mt-4">
+  {% block content %}
+  {% endblock %}
+</div>
+
+<script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+{% block js %}{% endblock %}
+</body>
 </html>
