--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,7 +7,7 @@
 {% endblock css %}
 
 {% block content %}
-    <h1 class="mt-5 pt-5"><strong >{{ content }}</strong></h1>
+    <h1 class="mt-10 pt-12 text-white"><strong >{{ content }}</strong></h1>
 {% endblock  %}
 
 {% block footer %}
