--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="{% static 'deps/favicon/kidslook_favicon.ico' %}" type="image/x-icon">
   <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'deps/css/my_css.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   {% block css %}{% endblock %}
 </head>
@@ -41,9 +42,25 @@
       <li class="nav-item me-3">
         <a class="nav-link" href="{% url 'cart:detail' %}" style="color: white;"> <i class="bi bi-cart"></i> Корзина </a>
       </li>
+      {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'users:login' %}" style="color: white;"> <i class="bi bi-person"></i> Войти </a>
+        <a class="nav-link" href="{% url 'users:profile' %}">
+          <i class="bi bi-person-circle"></i> {{ user.phone_number }}
+        </a>
       </li>
+      <li class="nav-item">
+        <form method="post" action="{% url 'users:logout' %}">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-outline-light ms-2">Выйти</button>
+        </form>
+      </li>
+    {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'users:phone_login' %}">
+          <i class="bi bi-box-arrow-in-right"></i> Войти
+        </a>
+      </li>
+    {% endif %}
     </ul>
   </div>
 </nav>
@@ -86,12 +103,21 @@
   </div>
 </div>
 
-<div class="container-fluid px-0 mt-4">
-  {% block content %}
-  {% endblock %}
+<div class="container mt-4">
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Закрыть"></button>
+      </div>
+    {% endfor %}
+  {% endif %}
+  
+  {% block content %}{% endblock %}
 </div>
 
 <script src="{% static 'deps/js/bootstrap/bootstrap.bundle.min.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 {% block js %}{% endblock %}
 </body>
 </html>
