--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -5,6 +5,7 @@
   <table class="table">
     <thead>
       <tr>
+        <th>Фото</th>
         <th>Товар</th>
         <th>Размер</th>
         <th>Количество</th>
@@ -15,8 +16,17 @@
     <tbody>
       {% for item in cart.items.all %}
         <tr>
-          <td>{{ item.product.name }}</td>
-          <td>{{ item.variation.size }}</td>
+          <td>
+            <a href="{{ item.product.get_absolute_url }}">
+              <img src="{{ item.product.get_first_photo }}" alt="{{ item.product.name }}" style="width: 60px; height: auto; border-radius: 4px;">
+            </a>
+          </td>
+          <td>
+            <a href="{{ item.product.get_absolute_url }}">
+              {{ item.product.name }}
+            </a>
+          </td>
+          <td>{{ item.variation.size }} — {{ item.variation.producer_size }}</td>
           <td>
             <form method="post" action="{% url 'cart:update_quantity' item.id %}">
               {% csrf_token %}
@@ -36,6 +46,7 @@
 {% else %}
   <p>Ваша корзина пуста.</p>
 {% endif %}
+
 <form method="post" action="{% url 'orders:create_order' %}">
   {% csrf_token %}
   <button type="submit" class="btn btn-success mt-3">Оформить заказ</button>
