--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -57,10 +57,11 @@
         </div>
 
         <!-- Добавление в корзину -->
-        <div id="cart-container" style="display: none;">
-          <form method="post" action="{% url 'cart:add_to_cart' product.id %}">
+        <div id="cart-container">
+          <form id="add-to-cart-form" method="post" action="{% url 'cart:add_to_cart' product.id %}">
             {% csrf_token %}
-            <input type="hidden" name="variation_id" id="variation-id">
+            <!-- Тут нужно вставить variation_id, например, первый из списка вариаций -->
+            <input type="hidden" name="variation_id" id="variation-id" value="{{ product.variations.first.id }}">
             <button type="submit" class="btn btn-dark w-100 mt-3 shadow-sm">Добавить в корзину</button>
           </form>
         </div>
